# strapvizpy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/bootpy/: __init__.py  display.py
src/straPy/: __init__.py  bootstrap.py  code_testing.ipynb  data_vis.py
src/strapPy/: __init__.py  data_vis.py  display.py
src/strappy/: __init__.py  bootstrap.py  display.py
src/strapvizpy/: display.py
tests/: test_bootstrap.py  test_data_vis.py  test_display.py  test_straPy.py  test_tables.py
