[tool.poetry]
name = "straPy"
version = "0.1.0"
description = "Performs bootstrapping of a dataset to produce plots and statistics for use in final reports and documents. "
authors = ["Julien Gordon, Gautham Pughazhendhi, Zack Tang, Margot Vore"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
